Add nearby search (integrating OS DataHub's Names API) (#31)
