# models/request/search_request.go
@@ -1,13 +1,6 @@
-/*
- * GPS Routes API
- *
- * API to retrieve and search GPS Walking Routes
- *
- * API version: 0.0.1
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
+package request
 
-package openapi
+import "github.com/rm-hull/gps-routes-api/models/common"
 
 type SearchRequest struct {
 
@@ -23,4 +16,12 @@ type SearchRequest struct {
 
 	// Filtering by facet values
 	Facets map[string][]string `json:"facets,omitempty"`
+
+	Nearby *Nearby `json:"nearby,omitempty"`
+}
+
+type Nearby struct {
+	Place      string         `json:"place"`
+	Center     *common.GeoLoc `json:"center,omitempty"`
+	DistanceKm int32          `json:"distanceKm"`
 }
